<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:paddingStart="@dimen/horizontal_padding"
    android:paddingEnd="@dimen/horizontal_padding"
    android:paddingTop="@dimen/vertical_padding"
    >

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <EditText
        android:id="@+id/et_search_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/WRITE_ID"
        android:inputType="text"
        android:paddingBottom="10dp"
        android:textSize="24sp"
        />
    <Button
        android:id="@+id/b_search_vk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BUTTON_TEXT_SEARCH"
        android:textSize="15sp"
        android:padding="0.5dp"
        android:layout_marginStart="5dp"
        />
</LinearLayout>
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_padding">
            <TextView
                android:id="@+id/tv_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RESULT"
                android:textSize="22sp"
                android:visibility="invisible"
                />
        </ScrollView>
        <TextView
            android:id="@+id/tv_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:padding="16dp"
            android:text="@string/error_message"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_userNotExist_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:padding="16dp"
            android:text="@string/UserNotExist"
            android:visibility="invisible" />
        
        <ProgressBar
            android:id="@+id/pb_loading_indicator"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:layout_width="45dp"
            android:layout_height="45dp" />

    </FrameLayout>

</LinearLayout>